--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mytests.spring</groupId>
-    <artifactId>componentscan-filters</artifactId>
+    <artifactId>spring-componentscan-filters</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
